style.css
/* ... */
@media (max-width: 650px) {

/* @media (max-width: 650px) Reduce font-sizes for better readability on smaller devices */

body, input, textarea {
	font-size: 13px;
}

#site-title a {
	font-size: 24px;
}

#site-description {
	font-size: 12px;
}

#access {
	width: 100%;
}

#access ul {
	font-size: 12px;
}

article.intro .entry-content {
	font-size: 12px;
}

.entry-title {
	font-size: 21px;
}

.featured-post .entry-title {
	font-size: 14px;
}

.singular .entry-title {
	font-size: 28px;
}

.entry-meta {
	font-size: 12px;
}

blockquote {
	margin: 0;
}

blockquote.pull {
	font-size: 17px;
}

/* Reposition the site title and description slightly */

#site-title {
	padding: 5.30625em 0 0;
}

#site-title,
	#site-description {
	margin-right: 0;
}

/* Make sure the logo and search form don't collide */

#branding #searchform {
	top: 1.625em !important;
}

/* Floated content doesn't work well at this size */

.alignleft,
	.alignright {
	float: none;
	margin-left: 0;
	margin-right: 0;
}

/* Make sure the post-post navigation doesn't collide with anything */

#nav-single {
	display: block;
	position: static;
}

.singular .hentry {
	padding: 0;
}

.singular.page .hentry {
	padding: 1.625em 0 0;
}

/* Talking avatars take up too much room at this size */

.commentlist > li.comment,
	.commentlist > li.pingback {
	margin-left: 0 !important;
}

.commentlist .avatar {
	background: transparent;
	display: block;
	padding: 0;
	position: static;
}

.commentlist .children .avatar {
	background: none;
	left: 2.2em;
	padding: 0;
	position: absolute;
	top: 2.2em;
}

/* Use the available space in the smaller comment form */

#respond input[type="text"] {
	width: 95%;
}

#respond .comment-form-author .required,
	#respond .comment-form-email .required {
	left: 95%;
}

#content .gallery-columns-3 .gallery-item {
	width: 31%;
	padding-right: 2%;
}

#content .gallery-columns-3 .gallery-item img {
	width: 100%;
	height: auto;
}

.home-button {
	margin: 1em auto;
	float: none;
}

#meteor-slideshow,
#meteor-slideshow .mslide,
#meteor-slideshow .mslide img {
	width: 390px !important;
	height: 180px !important;
}

#meteor-slideshow .mslide {
	margin: 0 auto;
}

#meteor-slideshow.navpaged,
#meteor-slideshow.navboth {
	padding: 0;
}

}

@media (max-width: 450px) {

/* @media max-width: 450px */

#content .gallery-columns-2 .gallery-item {
	width: 45%;
	padding-right: 4%;
}

#content .gallery-columns-2 .gallery-item img {
	width: 100%;
	height: auto;
}

.home-button {
	margin: 1em auto;
	float: none;
}

#meteor-slideshow,
#meteor-slideshow .mslide,
#meteor-slideshow .mslide img {
	width: 350px !important;
	height: 162px !important;
}

#meteor-slideshow .mslide {
	margin: 0 auto;
}

#meteor-slideshow.navpaged,
#meteor-slideshow.navboth {
	padding: 0;
}

}

@media only screen and (min-device-width: 320px) and (max-device-width: 480px) {

/* @media min-width: 320px and max-width: 480px */

body {
	padding: 0;
}

#page {
	margin: 0;
}

#branding {
	border-top: none;
}

.home-button {
	margin: 1em auto;
	float: none;
}

#meteor-slideshow,
#meteor-slideshow .mslide,
#meteor-slideshow .mslide img {
	width: 300px !important;
	height: 138px !important;
}

#meteor-slideshow .mslide {
	margin: 0 auto;
}

#meteor-slideshow.navpaged,
#meteor-slideshow.navboth {
	padding: 0;
}

}

.missionary-listed {
	min-height: 29ex;
}
/* ... */

